# ART_pipeline

./: CMakeLists.txt  LICENSE  README.md
header/: 512MHz_beamform_4096B.header
include/: dada_header.h  krnl.h  udp.h
pipeline/: CMakeLists.txt  pipeline_dada_amplitude_phase.cu  pipeline_dada_beamform.cu
scripts/: pipeline.sh
src/: dada_header.c  krnl.cu
udp/: udp.h  udp2db.cpp  udp2db.sh  udpgen.cpp
